--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "@theme-ui/presets": "0.11.3",
+    "@theme-ui/prism": "0.11.3",
     "gatsby": "^3.13.1",
     "gatsby-plugin-mdx": "2.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
