--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@theme-ui/presets": "0.11.3",
     "@theme-ui/prism": "0.11.3",
     "gatsby": "^3.13.1",
+    "gatsby-plugin-image": "1.14.0",
     "gatsby-plugin-mdx": "2.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
+    "gatsby-plugin-sharp": "3.14.0",
     "gatsby-plugin-theme-ui": "0.11.3",
     "gatsby-source-filesystem": "3.14.0",
     "react": "^17.0.1",
