--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@theme-ui/prism": "0.11.3",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "1.14.0",
+    "gatsby-plugin-manifest": "3.14.0",
     "gatsby-plugin-mdx": "2.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
     "gatsby-plugin-sharp": "3.14.0",
