--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@theme-ui/prism": "0.11.3",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "1.14.0",
+    "gatsby-plugin-lodash": "4.14.0",
     "gatsby-plugin-manifest": "3.14.0",
     "gatsby-plugin-mdx": "2.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
@@ -33,6 +34,7 @@
     "gatsby-plugin-theme-ui": "0.11.3",
     "gatsby-source-filesystem": "3.14.0",
     "gatsby-transformer-sharp": "3.14.0",
+    "lodash": "4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "6.1.0",
