--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-react-helmet": "4.14.0",
     "gatsby-plugin-sharp": "3.14.0",
     "gatsby-plugin-theme-ui": "0.11.3",
+    "gatsby-remark-images": "5.11.0",
     "gatsby-source-filesystem": "3.14.0",
     "gatsby-transformer-sharp": "3.14.0",
     "lodash": "4.17.21",
