--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mdx-js/react": "1.6.22",
     "@theme-ui/presets": "0.11.3",
     "@theme-ui/prism": "0.11.3",
-    "gatsby": "^3.13.1",
+    "gatsby": "^3.14.4",
+    "gatsby-plugin-feed-mdx": "1.1.0",
     "gatsby-plugin-image": "1.14.0",
     "gatsby-plugin-lodash": "4.14.0",
     "gatsby-plugin-manifest": "3.14.0",
