--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "6.1.0",
     "react-responsive": "9.0.0-beta.4",
+    "react-share": "4.4.0",
     "theme-ui": "0.11.3"
   }
 }
