--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "deploy": "gatsby build && gh-pages -d public"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "5.15.4",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
@@ -24,6 +26,9 @@
     "@fortawesome/react-fontawesome": "0.1.15",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/system": "^7.3.6",
     "@theme-ui/presets": "0.11.3",
     "@theme-ui/prism": "0.11.3",
     "gatsby": "^3.14.4",
@@ -36,9 +41,11 @@
     "gatsby-plugin-sharp": "3.14.0",
     "gatsby-plugin-theme-ui": "0.11.3",
     "gatsby-remark-images": "5.11.0",
+    "gatsby-remark-prismjs": "^5.5.0",
     "gatsby-source-filesystem": "3.14.0",
     "gatsby-transformer-sharp": "3.14.0",
     "lodash": "4.17.21",
+    "prismjs": "^1.30.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "6.1.0",
