--- a/package.json
+++ b/package.json
@@ -19,18 +19,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.36",
-    "@fortawesome/free-brands-svg-icons": "5.15.4",
-    "@fortawesome/free-regular-svg-icons": "5.15.4",
-    "@fortawesome/free-solid-svg-icons": "5.15.4",
-    "@fortawesome/react-fontawesome": "0.1.15",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@mui/system": "^7.3.6",
-    "@theme-ui/presets": "0.11.3",
-    "@theme-ui/prism": "0.11.3",
     "gatsby": "^3.14.4",
     "gatsby-plugin-feed-mdx": "1.1.0",
     "gatsby-plugin-image": "1.14.0",
@@ -39,7 +32,6 @@
     "gatsby-plugin-mdx": "2.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
     "gatsby-plugin-sharp": "3.14.0",
-    "gatsby-plugin-theme-ui": "0.11.3",
     "gatsby-remark-images": "5.11.0",
     "gatsby-remark-prismjs": "^5.5.0",
     "gatsby-source-filesystem": "3.14.0",
@@ -49,9 +41,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "6.1.0",
-    "react-responsive": "9.0.0-beta.4",
-    "react-share": "4.4.0",
-    "theme-ui": "0.11.3"
+    "react-share": "4.4.0"
   },
   "devDependencies": {
     "gh-pages": "3.2.3"
